--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.5
+
+flutter_icons: 
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/icon1.jpg"
+  adaptive_background: #ffffff
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
