--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
+  share: ^0.6.4+3
+  url_launcher: ^5.5.0 
+  font_awesome_flutter: ^8.8.1
+
+
 
 dev_dependencies:
   flutter_test:
